Se agrego el logo

--- a/GEIASTYPING.html
+++ b/GEIASTYPING.html
@@ -11,7 +11,7 @@
   <div class="container">
     <div class="stats">
       <div class="stats-left">
-        <img src="LogoGEIAS.jpeg" alt="Logo" class="stats-img">
+        <img src="IAS.png" alt="Logo" class="stats-img">
       </div>
       <div class="stats-right">
         <p>Tiempo: <span id="timer">0s</span></p>
