--- a/GEIASTYPING.html
+++ b/GEIASTYPING.html
@@ -13,6 +13,10 @@
       <div class="stats-left">
         <img src="IAS.png" alt="Logo" class="stats-img">
       </div>
+      <div class="stats-center">
+        <h2>GEIAS</h2>
+        <h2>Typing Test</h2>
+      </div>
       <div class="stats-right">
         <p>Tiempo: <span id="timer">0s</span></p>
         <p>Errores: <span id="mistakes">0</span></p>
@@ -24,6 +28,9 @@
     <textarea id="quote-input" class="hidden-input" aria-label="entrada de prueba"></textarea>
 
     <div class="controls">
+      <a href="datos.html" id="btn-table">
+        <button type="button" class="btn-table">Tabla de Datos</button>
+      </a>
       <button id="start-test">Iniciar Prueba</button>
       <button id="stop-test" style="display:none;">Detener Prueba</button>
     </div>
@@ -33,11 +40,9 @@
       <div class="wrapper">
         <p>Exactitud: <span id="accuracy">0 %</span></p>
         <p>Velocidad: <span id="wpm">0 wpm</span></p>
+      </div>
+      <div class="btn-result-wrapper">
         <button id="return-test" class="btn return" style="display:none;">Volver a prueba</button>
-
-        <a href="datos.html" id="btn-table" style="display:none;">
-          <button type="button" class="btn-table">Tabla de Datos</button>
-        </a>
       </div>
 
       <div id="user-data-form" style="display:none; margin-top:20px;">
@@ -46,13 +51,9 @@
         <input type="tel" id="phoneNumber" placeholder="Teléfono" />
         <div style="display:flex; gap:8px; justify-content:center; margin-top:8px;">
           <button id="save-data-btn">Enviar Datos</button>
-          <a href="datos.html" id="btn-table" style="display:none;">
-          <button type="button" class="btn-table">Tabla de Datos</button>
-        </a>
         </div>
       </div>
     </div>
-
   </div>
 
   <script src="script.js"></script>
