--- a/datos.html
+++ b/datos.html
@@ -47,7 +47,7 @@
   <table>
     <thead>
       <tr>
-        <th>Nombre Completo</th>
+        <th>Nivel</th> <th>Nombre Completo</th>
         <th>Teléfono</th>
         <th>WPM</th>
         <th>Exactitud (%)</th>
@@ -64,11 +64,15 @@
     function loadUsers() {
       const users = JSON.parse(localStorage.getItem("typingUsers")) || [];
       const table = document.getElementById("userTable");
+      
+      // Ordenar por WPM de mayor a menor
+      users.sort((a, b) => b.wpm - a.wpm);
+      
       table.innerHTML = "";
       users.forEach((user, i) => {
         const tr = document.createElement("tr");
         tr.innerHTML = `
-          <td>${user.name}</td>
+          <td>${i + 1}</td> <td>${user.name}</td>
           <td>${user.phone}</td>
           <td>${user.wpm}</td>
           <td>${user.accuracy}</td>
